# 2020.2_G2_Funcional_Calculator

./: .gitignore  README.md  calculator.cabal  stack.yaml
src/: Main.hs
src/app/: App.hs  Main.hs
src/parser/: parser.hs
src/util/: Eval.hs  Parser.hs
