name:                calculator
version:             0.1.0.0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , transformers
                     , parsec       >= 3.1 && < 3.2
                     , haskeline    >= 0.7 && < 0.8
  default-extensions:  NoMonomorphismRestriction,
                       OverloadedStrings
                       FlexibleContexts
  default-language:    Haskell2010

executable calculator
  hs-source-dirs:      src/app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , calculator
                     , text
                     , mtl
                     , transformers
                     , parsec       >= 3.1 && < 3.2
                     , haskeline    >= 0.7 && < 0.8
  default-extensions:  NoMonomorphismRestriction,
                       OverloadedStrings
                       FlexibleContexts
  default-language:    Haskell2010
